fixed assorted things